moved Welcome statement down, and fix overflow issue in the allergy log by increasing the container size

--- a/src/components/SummaryDetail/SummaryDetail.scss
+++ b/src/components/SummaryDetail/SummaryDetail.scss
@@ -12,7 +12,7 @@
     background-color: white;
 
     @include tablet {
-        width: 45%;
+        width: 60%;
     }
 
     &__container {
