--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -44,7 +44,7 @@
         width: 100%;
         text-align: center;
         font-size: 1.9rem;
-        margin-bottom: 1rem;
+        margin: 2rem 0 1rem 0;
     }
 
     &__tagline {
